--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xhh.demo</groupId>
-    <artifactId>xhh-demo</artifactId>
+    <artifactId>tiger-forest</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>demo-http</module>
-        <module>tiger-forest</module>
     </modules>
     <packaging>pom</packaging>
-    <name>Xhh Demo</name>
+    <name>Tiger Forest</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
