--- a/blog/package.json
+++ b/blog/package.json
@@ -7,17 +7,13 @@
     },
     "dependencies": {
         "express": "~4.2.0",
+        "express-session": "*",
         "static-favicon": "~1.0.0",
         "morgan": "~1.0.0",
         "cookie-parser": "~1.0.1",
         "body-parser": "~1.0.0",
         "debug": "~0.7.4",
-        "ejs": "~0.8.5"
-    },
-    "dependencies": {
-        "express": "*",
-        "express-session": "*",
-        "ejs": "*",
+        "ejs": "~0.8.5",
         "mongodb": "*",
         "connect-mongo": "*",
         "connect-flash": "*"
