--- a/demo-http/pom.xml
+++ b/demo-http/pom.xml
@@ -9,7 +9,6 @@
     <artifactId>demo-http</artifactId>
     <packaging>jar</packaging>
     <name>Demo Http</name>
-    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -21,8 +20,8 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
