--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>demo-http</module>
         <module>demo-bank</module>
         <module>demo-hadoop</module>
+        <module>demo-dispatch</module>
     </modules>
     <packaging>pom</packaging>
     <name>Tiger Forest</name>
@@ -32,6 +33,7 @@
         <jms.version>1.1-rev-1</jms.version>
         <zk.version>0.3</zk.version>
         <lombok.version>0.11.4</lombok.version>
+        <commons-lang3.version>3.1</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -169,9 +171,9 @@
             </dependency>
 
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>2.6</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
