--- a/demo-http/pom.xml
+++ b/demo-http/pom.xml
@@ -162,6 +162,12 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
