--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <zk.version>0.3</zk.version>
         <lombok.version>0.11.4</lombok.version>
         <commons-lang3.version>3.1</commons-lang3.version>
+        <mockito.version>1.8.5</mockito.version>
     </properties>
 
     <dependencies>
@@ -228,13 +229,6 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>3.0.1</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
@@ -395,6 +389,13 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.2.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
