--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,27 @@
     <groupId>com.xhh.demo</groupId>
     <artifactId>tiger-forest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Tiger Forest</name>
+
     <modules>
         <module>demo-http</module>
         <module>demo-bank</module>
         <module>demo-hadoop</module>
         <module>demo-dispatch</module>
     </modules>
-    <packaging>pom</packaging>
-    <name>Tiger Forest</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.encoding>UTF-8</java.encoding>
+        <maven.source.version>2.2.1</maven.source.version>
+        <maven.compiler.version>3.1</maven.compiler.version>
+        <maven.resources.version>2.4.3</maven.resources.version>
+        <maven.jar.version>2.3</maven.jar.version>
         <spring.version>3.2.4.RELEASE</spring.version>
-        <struts2.version>2.3.15.2</struts2.version>
         <mybatis.version>3.2.0</mybatis.version>
         <mybatis-spring.version>1.1.1</mybatis-spring.version>
         <commons-configuration.version>1.9</commons-configuration.version>
         <commons-chain.version>1.2</commons-chain.version>
-        <activemq.version>5.8.0</activemq.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.5</slf4j.version>
         <dubbo.version>2.4.10</dubbo.version>
@@ -34,6 +36,7 @@
         <zk.version>0.3</zk.version>
         <lombok.version>0.11.4</lombok.version>
         <commons-lang3.version>3.1</commons-lang3.version>
+        <autoconfig.plugin.version>1.2</autoconfig.plugin.version>
         <mockito.version>1.8.5</mockito.version>
     </properties>
 
@@ -182,21 +185,6 @@
                 <version>${commons-configuration.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-httpclient</groupId>
-                <artifactId>commons-httpclient</artifactId>
-                <version>3.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpcore</artifactId>
-                <version>4.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.3</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-chain</groupId>
                 <artifactId>commons-chain</artifactId>
                 <version>${commons-chain.version}</version>
@@ -239,17 +227,6 @@
                     </exclusion>
 
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-client</artifactId>
-                <version>${activemq.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-core</artifactId>
-                <version>${activemq.version}</version>
             </dependency>
 
             <!-- log about start -->
@@ -326,65 +303,10 @@
                 <version>3.0</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.bestpay</groupId>
-                <artifactId>netpay-client</artifactId>
-                <version>1.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.bestpay</groupId>
-                <artifactId>bestpay</artifactId>
-                <version>1.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.handpay</groupId>
-                <artifactId>handpay-telecom-client</artifactId>
-                <version>1.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.mchange</groupId>
-                <artifactId>c3p0</artifactId>
-                <version>0.9.5-pre3</version>
-            </dependency>
-            <dependency>
-                <groupId>com.mchange</groupId>
-                <artifactId>mchange-commons-java</artifactId>
-                <version>0.2.6.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.101tec</groupId>
-                <artifactId>zkclient</artifactId>
-                <version>${zk.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.unionpay</groupId>
-                <artifactId>api</artifactId>
-                <version>1.0</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
-            <!-- add jaxen -->
-            <dependency>
-                <groupId>jaxen</groupId>
-                <artifactId>jaxen</artifactId>
-                <version>1.1.4</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aixforce.radiation</groupId>
-                <artifactId>radiation-client</artifactId>
-                <version>1.2</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.bocnet</groupId>
-                <artifactId>common.security</artifactId>
-                <version>1.0</version>
-            </dependency>
-
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
@@ -401,34 +323,53 @@
     </dependencyManagement>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
-                    <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <finalName>tigerforest</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${java.encoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven.jar.version}</version>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven.resources.version}</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!-- 上传源码 -->
+            <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>attach-sources</id>
-                        <phase>deploy</phase>
+                        <phase>compile</phase>
                         <goals>
-                            <goal>jar-no-fork</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+            <!--javadoc plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -443,55 +384,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <!-- explicitly define maven-deploy-plugin after other to force exec
-                    order -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.7</version>
-                <executions>
-                    <execution>
-                        <id>deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://116.228.55.189:8085/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://116.228.55.189:8085/nexus/content/groups/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
