--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </modules>
 
     <properties>
+        <java.version>1.6</java.version>
         <java.encoding>UTF-8</java.encoding>
         <maven.source.version>2.2.1</maven.source.version>
         <maven.compiler.version>3.1</maven.compiler.version>
