--- a/demo-hadoop/pom.xml
+++ b/demo-hadoop/pom.xml
@@ -21,6 +21,7 @@
     </dependencies>
 
     <build>
+        <finalName>demo-hadoop</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
