--- a/demo-dubbo/demo-dubbo-consumer/src/main/resources/properties/config.properties
+++ b/demo-dubbo/demo-dubbo-consumer/src/main/resources/properties/config.properties
@@ -8,4 +8,6 @@ logger.logLevel  = debug
 logger.logRoot   = /Users/tiger/project/logs
 
 zookeeper.url = localhost:2181
-zookeeper.port = 20881
+#zookeeper.url = 172.17.202.1:2181
+#zookeeper.url = 172.17.162.239:2181
+zookeeper.port = 20882
