--- a/demo-dubbo/demo-dubbo-provider/src/main/resources/properties/config.properties
+++ b/demo-dubbo/demo-dubbo-provider/src/main/resources/properties/config.properties
@@ -9,4 +9,6 @@ logger.logRoot   = /Users/tiger/project/logs
 #logger.logRoot   = /logs/tiger
 
 zookeeper.url = localhost:2181
+#zookeeper.url = 172.17.202.1:2181
+#zookeeper.url = 172.17.162.239:2181
 zookeeper.port = 20881
