--- a/demo-dubbo/demo-dubbo-provider/pom.xml
+++ b/demo-dubbo/demo-dubbo-provider/pom.xml
@@ -18,6 +18,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.xhh.demo</groupId>
+            <artifactId>demo-dubbo-provider-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
