--- a/demo-dubbo/demo-dubbo-consumer/pom.xml
+++ b/demo-dubbo/demo-dubbo-consumer/pom.xml
@@ -24,8 +24,19 @@
         </dependency>
         <dependency>
             <groupId>com.xhh.demo</groupId>
-            <artifactId>demo-dubbo-provider</artifactId>
+            <artifactId>demo-dubbo-provider-api</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.4.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.3</version>
         </dependency>
 
         <dependency>
