--- a/demo-dubbo/demo-dubbo-consumer/pom.xml
+++ b/demo-dubbo/demo-dubbo-consumer/pom.xml
@@ -20,29 +20,25 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.3</version>
         </dependency>
         <dependency>
-            <groupId>com.xhh.demo</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>demo-dubbo-provider-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.5.3</version>
         </dependency>
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
-            <version>0.3</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.0.13</version>
         </dependency>
 
         <dependency>
