--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <module>demo-http</module>
         <module>demo-bank</module>
         <module>demo-hadoop</module>
-        <module>demo-dispatch</module>
         <module>demo-zookeeper</module>
         <module>demo-fastdfs</module>
         <module>demo-spring</module>
@@ -22,7 +21,7 @@
     </modules>
 
     <properties>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
         <java.encoding>UTF-8</java.encoding>
         <maven.source.version>2.2.1</maven.source.version>
         <maven.compiler.version>3.1</maven.compiler.version>
@@ -39,28 +38,23 @@
         <servlet-api.version>3.0.1</servlet-api.version>
         <jms.version>1.1-rev-1</jms.version>
         <zk.version>0.3</zk.version>
-        <lombok.version>0.11.4</lombok.version>
+        <lombok.version>1.16.6</lombok.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <autoconfig.plugin.version>1.2</autoconfig.plugin.version>
         <mockito.version>1.8.5</mockito.version>
+        <logback.version>1.0.13</logback.version>
+        <joda-time.version>2.3</joda-time.version>
+        <zkclient.version>0.3</zkclient.version>
+        <logback-core.version>1.0.13</logback-core.version>
+        <junit.version>4.11</junit.version>
+        <guava.version>15.0</guava.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>15.0</version>
-        </dependency>
-        <!-- log about start -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -72,44 +66,33 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.13</version>
-            <scope>runtime</scope>
         </dependency>
-        <!-- log about end -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>32</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>32</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
-            <scope>32</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>1.3</version>
-            <scope>32</scope>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
@@ -131,11 +114,29 @@
                 <artifactId>mybatis-spring</artifactId>
                 <version>${mybatis-spring.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback-core.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>ojdbc</groupId>
                 <artifactId>ojdbc</artifactId>
                 <version>6</version>
                 <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -230,11 +231,14 @@
                         <groupId>org.springframework</groupId>
                         <artifactId>spring</artifactId>
                     </exclusion>
-
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
+            </dependency>
 
-            <!-- log about start -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -249,8 +253,14 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
+                <scope>runtime</scope>
             </dependency>
-            <!-- log about end -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+                <scope>runtime</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -280,7 +290,7 @@
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
-                <version>2.3</version>
+                <version>${joda-time.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.jms</groupId>
