--- a/demo-http/pom.xml
+++ b/demo-http/pom.xml
@@ -44,6 +44,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax.jms</groupId>
             <artifactId>jms-api</artifactId>
         </dependency>
