add spring cloud consul

--- a/demo-spring/demo-spring-boot/src/main/resources/application.properties
+++ b/demo-spring/demo-spring-boot/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+# user definition configuration
 swagger.enabled=${swagger.enabled}
-logger.error.appender=${logger.error.appender}
+
+spring.application.name=demo
 
 # embedded server configuration
 server.port=8080
@@ -13,4 +15,3 @@ spring.http.encoding.force=true
 
 # spring mvc
 spring.mvc.favicon.enabled=false
-error.whitelabel.enabled=false
