--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <spring.test.version>4.1.9.RELEASE</spring.test.version>
         <junit.version>4.12</junit.version>
         <guava.version>15.0</guava.version>
-        <spring.boot.version>1.2.5.RELEASE</spring.boot.version>
+        <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -249,6 +249,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
