--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <servlet-api.version>3.1.0</servlet-api.version>
         <jms.version>1.1-rev-1</jms.version>
         <zk.version>0.3</zk.version>
-        <lombok.version>1.16.6</lombok.version>
+        <lombok.version>1.16.8</lombok.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <autoconfig.plugin.version>1.2</autoconfig.plugin.version>
         <mockito.version>1.8.5</mockito.version>
@@ -47,12 +47,22 @@
         <logback-core.version>1.0.13</logback-core.version>
         <spring.test.version>4.1.9.RELEASE</spring.test.version>
         <junit.version>4.12</junit.version>
-        <guava.version>15.0</guava.version>
+        <guava.version>19.0</guava.version>
         <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
+        <squareup.retrofit.version>2.0.2</squareup.retrofit.version>
+        <springfox.swagger2.version>2.4.0</springfox.swagger2.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Brixton.SR4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -142,12 +152,6 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>1.8</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>2.2.3</version>
             </dependency>
 
             <dependency>
@@ -249,12 +253,33 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
-                <scope>provided</scope>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.2.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.squareup.retrofit2</groupId>
+                <artifactId>retrofit</artifactId>
+                <version>${squareup.retrofit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.retrofit2</groupId>
+                <artifactId>converter-gson</artifactId>
+                <version>${squareup.retrofit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox.swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox.swagger2.version}</version>
             </dependency>
 
             <dependency>
