--- a/demo-dubbo/demo-dubbo-consumer/pom.xml
+++ b/demo-dubbo/demo-dubbo-consumer/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>joda-time</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>demo-dubbo-provider-api</artifactId>
             <version>${project.version}</version>
@@ -83,6 +87,10 @@
                     <groupId>commons-logging</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
         </dependency>
     </dependencies>
 
