--- a/demo-fastdfs/src/main/resources/properties/config.properties
+++ b/demo-fastdfs/src/main/resources/properties/config.properties
@@ -1,6 +1,6 @@
-db.jdbcPassword  = 1234
-db.jdbcUrl       = jdbc:oracle:thin:@116.228.55.185:21521:test
-db.jdbcUsername  = btupayprod
+db.jdbcPassword  =
+db.jdbcUrl       =
+db.jdbcUsername  =
 
 jdbc.driverClassName                = oracle.jdbc.driver.OracleDriver
 jdbc.initialSize                    = 10
