--- a/demo-dubbo/demo-dubbo-provider/pom.xml
+++ b/demo-dubbo/demo-dubbo-provider/pom.xml
@@ -61,6 +61,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
