--- a/demo-apache/demo-apache-shiro/pom.xml
+++ b/demo-apache/demo-apache-shiro/pom.xml
@@ -52,15 +52,15 @@
     </dependencies>
 
     <build>
-        <filters>
-            <filter>${basedir}/src/main/profile/config.properties</filter>
-        </filters>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+        <!--<filters>-->
+            <!--<filter>${basedir}/src/main/profile/config.properties</filter>-->
+        <!--</filters>-->
+        <!--<resources>-->
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<filtering>true</filtering>-->
+            <!--</resource>-->
+        <!--</resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
