--- a/demo-dubbo/demo-dubbo-monitor/pom.xml
+++ b/demo-dubbo/demo-dubbo-monitor/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>demo-dubbo-consumer</artifactId>
+    <artifactId>demo-dubbo-monitor</artifactId>
     <packaging>jar</packaging>
-    <name>Demo Dubbo Consumer</name>
+    <name>Demo Dubbo Monitor</name>
 
     <dependencies>
         <dependency>
